--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,39 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-image: url(cloud.jpg);
-    background-size: cover;
+  font-family: Arial, Helvetica, sans-serif;
+  background-image: url(cloud.jpg);
+  background-size: cover;
 }
 
 #container {
-    width: 300px;
-    height: 285px;
-    padding: 0, 15px, 15px, 15px;
-    margin: auto;
-    background-color: white;
+  width: 300px;
+  height: 300px;
+  padding: 0, 15px, 15px, 15px;
+  margin: auto;
+  background-color: white;
+}
+
+.containerUp {
+  width: 300px;
+  height: 30px;
+  padding: 0, 15px, 15px, 15px;
+  margin: auto;
+  color: wheat;
+  text-align: center;
 }
 
 #form {
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 80px;
-    width: 250px;
-    height: 250px;
-    background-color: rgb(227, 227, 227);
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 80px;
+  width: 250px;
+  height: 250px;
+  background-color: rgb(227, 227, 227);
 }
 
 #legend {
-    font-weight: bold;
-    color: rgb(43, 43, 242);
-    font-size: 1.5rem;
+  font-weight: bold;
+  color: rgb(43, 43, 242);
+  font-size: 1.5rem;
 }
 
 #login,
@@ -34,5 +43,5 @@ body {
 #todayMsg,
 #todayDate,
 #timeNow {
-    margin-top: 10px;
+  margin-top: 10px;
 }
