--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,7 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Montserrat', sans-serif;
   background-image: url(cloud.jpg);
   background-size: cover;
-}
-
-#container {
-  width: 300px;
-  height: 300px;
-  padding: 0, 15px, 15px, 15px;
-  margin: auto;
-  background-color: white;
 }
 
 .containerUp {
@@ -17,23 +9,34 @@ body {
   height: 30px;
   padding: 0, 15px, 15px, 15px;
   margin: auto;
-  color: wheat;
   text-align: center;
+  color: white;
+}
+
+#container {
+  width: 350px;
+  height: 450px;
+  padding: 20px;
+  margin: auto;
+  background-color: white;
+  border-radius: 15px;
+  justify-content: center;
 }
 
 #form {
+  text-align: center;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 80px;
-  width: 250px;
-  height: 250px;
+  width: 320px;
+  height: 420px;
   background-color: rgb(227, 227, 227);
+  border-radius: 20px;
 }
 
 #legend {
   font-weight: bold;
   color: rgb(43, 43, 242);
-  font-size: 1.5rem;
+  font-size: 2.5rem;
 }
 
 #login,
@@ -43,5 +46,14 @@ body {
 #todayMsg,
 #todayDate,
 #timeNow {
-  margin-top: 10px;
+  margin-top: 20px;
+}
+
+#login{
+  width: 100px;
+  height: 30px;
+}
+
+.labelTxt{
+  margin-bottom: 5px;
 }
